# CANBus-Key-Distribution

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json
bench/: BenchUtil.h  bench_operations.cpp  bench_scenarios.cpp
docs/data/: operations.csv  scenarios.csv
inc/: CANKeyDistrb.h  Mods.h
scripts/: plot_benchmarks.py
src/: CANKeyDistrb.cpp  main.cpp
test/: test_keydist.cpp
